--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Akimebro News Network</title>
-    `<link rel="Stylesheet" href="css/style.css">
+    `<link rel="Stylesheet" href="CSS/style.css">
 </head>
 <body>
     <header>
